add next example window
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 		$('#mytextarea').texyed()
 			.teLoremIpsum()
 			.teAddWindow('testWindow', 'Hello world!', '<h1>Big boss photo viewer!</h1>')
-			.teShowWindow('testWindow');
+			.teAddWindow('filemanager', 'File Manager', '<h1>Loading... Please wait.</h1>')
+			.teShowWindow('filemanager');
 	</script>
 </body>
 </html>
