[buttons] oprava - ted uz funguje navazani handleru na click
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 	<script type="text/javascript" src="texyed/js/texyed.core.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.lorem-ipsum.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.windows.js"></script>
+	<script type="text/javascript" src="texyed/js/texyed.buttons.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.tab.js"></script>
+	<script type="text/javascript" src="texyed/js/texyed.autogrow.js"></script>
 	
 	<script type="text/javascript">
 		$('#mytextarea').texyed()
@@ -55,6 +57,11 @@
 			.teTab()
 			.teAddWindow('testWindow', 'Hello world!', '<h1>Big boss photo viewer!</h1>')
 			.teAddWindow('filemanager', 'File Manager', '<h1>Loading... Please wait.</h1>')
+			//.teShowWindow('filemanager')
+			.teGetWindow('filemanager').children('.ui-content')
+			.teAddButton('Save', function(){alert('Saving...');})
+			.teAddButton('Cancel', function(){alert('Canceling...');})
+			.teAddButton('Next', function(){alert('Go To Next!');})
 			;
 			//.teShowWindow('filemanager');
 	</script>
