add Autogrow module
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		$('#mytextarea').texyed()
 			.teLoremIpsum()
 			.teTab()
+			.teAutogrow()
 			.teAddWindow('testWindow', 'Hello world!', '<h1>Big boss photo viewer!</h1>')
 			.teAddWindow('filemanager', 'File Manager', '<h1>Loading... Please wait.</h1>')
 			//.teShowWindow('filemanager')
