add styles for index.html to repo; update index.html
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	<meta name="viewport" content="width=device-width">
 	<!-- <meta n:ifset="$robots" name="robots" content="{$robots}noindex, nofollow | index, follow | all"> -->
 	
-	<link rel="stylesheet" href="http://localhost/typro/typro.reset.css" type="text/css">
-	<link rel="stylesheet" href="http://localhost/typro/typro.default.css" type="text/css">
+	<link rel="stylesheet" href="css/typro.reset.css" type="text/css">
+	<link rel="stylesheet" href="css/typro.default.css" type="text/css">
+	<link rel="stylesheet" href="css/typro.color.a.css" type="text/css">
 	
 	<link rel="stylesheet" media="screen,projection,tv" href="texyed/themes/default.css" type="text/css">
 	<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="desktop.css"><![endif]-->
@@ -43,7 +44,7 @@
 		<a href="#" class="ui-button ui-delete">Cancel</a>
 		
 		<hr>
-		&copy; Jan Pecha, 2012 | <a href="http://github.com/janpecha/texyed/">Source code</a>
+		&copy; <a href="http://janpecha.iunas.cz/">Jan Pecha</a>, 2012 | <a href="http://github.com/janpecha/texyed/">Source code</a>
 	</div>
 	
 <!--	<script type="text/javascript" src="texyed/zepto.js"></script>-->
@@ -68,7 +69,7 @@
 			.teTab()
 			//.teAutogrow()
 			.teAddToolbar('main')
-			.tePreview('preview.php')
+			.teSimplePreview('preview.php')
 			.teAddAfterToolbar('buttonbar')
 			.teAddWindow('testWindow', 'Hello world!', '<h1>Big boss photo viewer!</h1>')
 			.teAddWindow('filemanager', 'File Manager', '<h1>Loading... Please wait.</h1>')
