--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<script type="text/javascript" src="texyed/js/texyed.toolbars.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.tab.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.autogrow.js"></script>
-	<script type="text/javascript" src="texyed/js/texyed.simple-preview.js"></script>
+	<script type="text/javascript" src="texyed/js/texyed.preview.js"></script>
 	<script type="text/javascript" src="texyed/langs/lang.cz.js"></script>
 	
 	<script type="text/javascript">
@@ -71,7 +71,13 @@
 			.teTab()
 			//.teAutogrow()
 			.teAddToolbar('main')
-			.teSimplePreview('preview.php')
+			//.teSimplePreview('preview.php')
+			.tePreview('preview.php', [
+				'css/typro.reset.css',
+				'css/typro.default.css',
+				'css/typro.visual.css',
+				'css/typro.color.a.css'
+			])
 			.teAddAfterToolbar('buttonbar')
 			.teAddWindow('testWindow', 'Hello world!', '<h1>Big boss photo viewer!</h1>')
 			.teAddWindow('filemanager', 'File Manager', '<h1>Loading... Please wait.</h1>')
