texyed.preview.iframe, texyed.preview.simple: changed names of plugins index.html: updated
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<script type="text/javascript" src="texyed/js/texyed.toolbars.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.tab.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.autogrow.js"></script>
-	<script type="text/javascript" src="texyed/js/texyed.preview.js"></script>
+	<script type="text/javascript" src="texyed/js/texyed.preview.iframe.js"></script>
 	<script type="text/javascript" src="texyed/langs/lang.cz.js"></script>
 	
 	<script type="text/javascript">
@@ -71,8 +71,8 @@
 			.teTab()
 			//.teAutogrow()
 			.teAddToolbar('main')
-			//.teSimplePreview('preview.php')
-			.tePreview('preview.php', [
+			//.tePreviewSimple('preview.php')
+			.tePreviewIframe('preview.php', [
 				'css/typro.reset.css',
 				'css/typro.default.css',
 				'css/typro.visual.css',
