--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<script type="text/javascript" src="texyed/js/texyed.tab.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.autogrow.js"></script>
 	<script type="text/javascript" src="texyed/js/texyed.preview.loader.js"></script>
-	<script type="text/javascript" src="texyed/js/texyed.preview.simple.js"></script>
+	<script type="text/javascript" src="texyed/js/texyed.preview.iframe.js"></script>
 	<script type="text/javascript" src="texyed/langs/lang.cz.js"></script>
 	
 	<script type="text/javascript">
@@ -72,13 +72,13 @@
 			.teTab()
 			//.teAutogrow()
 			.teAddToolbar('main')
-			.tePreviewSimple('preview.php')
-			//.tePreviewIframe('preview.php', [
-			//	'css/typro.reset.css',
-			//	'css/typro.default.css',
-			//	'css/typro.visual.css',
-			//	'css/typro.color.a.css'
-			//])
+			//.tePreviewSimple('preview.php')
+			.tePreviewIframe('preview.php', [
+				'css/typro.reset.css',
+				'css/typro.default.css',
+				'css/typro.visual.css',
+				'css/typro.color.a.css'
+			])
 			.teAddAfterToolbar('buttonbar')
 			.teAddWindow('testWindow', 'Hello world!', '<h1>Big boss photo viewer!</h1>')
 			.teAddWindow('filemanager', 'File Manager', '<h1>Loading... Please wait.</h1><p>Dummy window</p>')
@@ -106,8 +106,8 @@
 				texyed.teShowWindow('filemanager');
 			})
 			
-			//.teAddPreviewIframeButton('Náhled')
-			.teAddPreviewSimpleButton('Náhled')
+			.teAddPreviewIframeButton('Náhled')
+			//.teAddPreviewSimpleButton('Náhled')
 			;
 		
 		texyed.teGetToolbar('buttonbar')
