index.html: updated
Zaktualizana moznost nastaveni preview.iframe

Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		}
 		
 		#mytextarea {
+			width: 90%;
 			margin-left: auto;
 			margin-right: auto;
 			font-size: 90%;
@@ -78,7 +79,7 @@
 				'css/typro.default.css',
 				'css/typro.visual.css',
 				'css/typro.color.a.css'
-			])
+			]/*, true, true, true*/)
 			.teAddAfterToolbar('buttonbar')
 			.teAddWindow('testWindow', 'Hello world!', '<h1>Big boss photo viewer!</h1>')
 			.teAddWindow('filemanager', 'File Manager', '<h1>Loading... Please wait.</h1><p>Dummy window</p>')
